--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -20,6 +20,19 @@ concurrency:
   cancel-in-progress: false  # Don't touch this
 
 jobs:
+  wasm:
+    runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - name: Install wasm-pack
+        # USING CARRGOOO!!???
+          run: cargo install wasm-pack
+        - name: Set target
+          run: rustup target add wasm32-unknown-unknown
+        - name: Build wasmfile
+          run: wasm-pack build --target web
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -40,12 +53,6 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-      - name: Install wasm-pack
-        run: cargo install wasm-pack
-      - name: Set target
-        run: rustup target add wasm32-unknown-unknown
-      - name: Build wasmfile
-        run: wasm-pack build --target web
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
