--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -19,18 +19,12 @@ concurrency:
   group: "pages"
   cancel-in-progress: false  # Don't touch this
 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install wasm-pack
-      # USING CARRGOOO!!???
-        run: cargo install wasm-pack
-      - name: Set target
-        run: rustup target add wasm32-unknown-unknown
-      - name: Build wasmfile
-        run: wasm-pack build --target web
       - name: Detect package manager
         id: detect-package-manager
         run: |
