--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -31,6 +31,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install curl
+        run: sudo apt-get update && sudo apt-get install -y curl
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - name: Set target
+        run: rustup target add wasm32-unknown-unknown
+      - name: Build wasmfile
+        run: wasm-pack build --target web --out-dir ./assets/module
       - name: Detect package manager
         id: detect-package-manager
         run: |
