--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -33,27 +33,20 @@ jobs:
         run: rustup target add wasm32-unknown-unknown
       - name: Build wasmfile
         run: wasm-pack build --target web
-      - name: Detect Package Manager
+      - name: Detect package manager
         id: detect-package-manager
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
+          if [ -f "${{ github.workspace }}/bun.lockb" ]; then
+            echo "manager=bun" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            exit 0
           else
-            echo "Unable to determine package manager"
+            echo "USE BUANDUANSNDUCNNN!!!?>??ASDJHAB"
             exit 1
           fi
-      - name: Generate package-lock.json
-        run: npm install
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun env
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
