--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ path = "parser/lib.rs"
 
 [dependencies]
 wasm-bindgen = "0.2.74"
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0.117"
