--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ name = "wasmfile"
 path = "parser/lib.rs"
 
 [dependencies]
-wasm-bindgen = "0.2.74"
+wasm-bindgen = { version = "0.2.74" }
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0.117"
